Using getDeclaredConstructor() as suggested by newer Java versions